[gd_scene load_steps=2 format=3 uid="uid://bs3dnnvnxyp68"]

[ext_resource type="Script" path="res://src/UI/Timeline/FrameProperties.gd" id="1"]

[node name="FrameProperties" type="ConfirmationDialog"]
title = "Frame properties"
size = Vector2i(224, 156)
exclusive = false
popup_window = true
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 216.0
offset_bottom = 107.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Frame properties"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Frame" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Frame"

[node name="FrameNum" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "1"

[node name="FrameDuration" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Frame duration"

[node name="FrameTime" type="SpinBox" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
min_value = 0.05
step = 0.05
value = 1.0
allow_greater = true
suffix = "x"

[connection signal="about_to_popup" from="." to="." method="_on_FrameProperties_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_FrameProperties_confirmed"]
[connection signal="visibility_changed" from="." to="." method="_on_FrameProperties_visibility_changed"]
